config/envoy/http2.yaml
static_resources:
    clusters:
        - name: backend1
          connect_timeout: 3s
          type: STATIC
          lb_policy: ROUND_ROBIN
          transport_socket:
              name: envoy.transport_sockets.tls
              typed_config:
                  "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          load_assignment:
              cluster_name: service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 127.0.0.1
                                      port_value: 8003
    listeners:
        - name: listener0
          address:
              socket_address:
                  address: 0.0.0.0
                  port_value: 8080

          filter_chains:
              - transport_socket:
                    name: envoy.transport_sockets.tls
                    typed_config:
                        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
                        common_tls_context:
                            tls_certificates:
                                - certificate_chain:
                                      { filename: "config/envoy.crt" }
                                  private_key: { filename: "config/envoy.key" }
                            alpn_protocols:
                                - h2
                                - http/1.1
                filters:
                    - name: envoy.filters.network.http_connection_manager
                      typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                          codec_type: auto
                          stat_prefix: ingress_http
                          route_config:
                              name: local_route
                              virtual_hosts:
                                  - name: backend
                                    domains:
                                        - "*"
                                    routes:
                                        - match:
                                              prefix: "/"
                                              headers:
                                                  - name: "backend"
                                                    string_match:
                                                        exact: "server1"
                                          route:
                                              cluster: backend1
                          http_filters:
                              - name: envoy.filters.http.router
                                typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
